# data_forge

./: .gitignore  LICENSE  README.md  docker-compose.yaml  pyproject.toml
src/analytics/: dbt_project.yml
src/analytics/models/: sources.yml
src/analytics/models/cdc/: airplanes_data.sql  airports_data.sql  boarding_passes.sql  flights.sql  routes.sql  seats.sql  segments.sql  tickets.sql
src/analytics/models/mart/: air_service_mart.sql
src/dagster_air_service/: definitions.py
src/dagster_air_service/defs/assets/: assets.py
